== (unreleased)

* Start logging some locally executed commands [springyweb]

* Added HOSTFILTER environment variable for constraining tasks so they run only on hosts matching the given list of servers [Walter Smith]

* Make sure the glob matching for copy excludes does not delete parent directories [Fabio Akita]

* Ruby 1.9 compatibility [Jamis Buck]


== 2.5.0 / August 28, 2008

* Allow :gateway to be set to an array, in which case a chain of tunnels is created [Kerry Buckley]

* Allow HOSTS spec to override even non-existent roles [Mike Bailey]

* Sort releases via "ls -xt" instead of "ls -x" to allow for custom release names [Yan Pritzker]

* Convert arguments to -s and -S into integers, booleans, etc. based on whether the arguments appear to be those types [Jamis Buck]

* Add descriptions of -n and -d to the verbose help text [Jamis Buck]

* Make rollbacks work with processes that need the current directory to be valid in order to restart properly (e.g. mongrel_rails) [Jamis Buck]

* Rename deploy:rollback_code to deploy:rollback:code [Jamis Buck]

* Added parallel() helper for executing multiple different commands in parallel [Jamis Buck]

* Make sure a task only uses the last on_rollback block, once, on rollback [Jamis Buck]

* Add :shared_children variable to customize which subdirectories are created by deploy:setup [Jonathan Share]

* Allow filename globbing in copy_exclude setting for the copy strategy [Jonathan Share]

* Allow remote_cache strategy to use copy_exclude settings (requires rsync) [Lewis Mackenzie]

* Make None SCM module work in Windows [Carlos Kozuszko]

* Recognize mingw as a Windows platform [Carlos Kozuszko]

* Fixed failing tests in Windows [Carlos Kozuszko]

* Made :scm_auth_cache control whether password option is emitted in subversion module [Brendan Schwartz]

* Fixed timestamp bug in CVS module [Jørgen Fjeld]

* Added -n/--dry-run switch, to display but not execute remote tasks [Paul Gross]


== 2.4.3 / June 28, 2008
