@@ -33,7 +33,7 @@ class CLIHelpTest < Test::Unit::TestCase
 
   def test_execute_requested_actions_with_tasks_should_call_task_list
     @cli.options[:tasks] = true
-    @cli.expects(:task_list).with(:config)
+    @cli.expects(:task_list).with(:config, true)
     @cli.expects(:explain_task).never
     @cli.execute_requested_actions(:config)
     assert !@cli.called_original
@@ -64,6 +64,40 @@ class CLIHelpTest < Test::Unit::TestCase
     @cli.task_list(config)
   end
 
+  def test_task_list_should_query_tasks_in_namespace
+    expected_max_len = 80 - 3 - MockCLI::LINE_PADDING
+    task_list = [task("g", "c:g"), task("b", "c:b")]
+    task_list.each { |t| t.expects(:brief_description).with(expected_max_len).returns(t.fully_qualified_name)}
+
+    namespace = mock("namespace")
+    namespace.expects(:task_list).with(:all).returns(task_list)
+    
+    namespaces = mock("namespaces")
+    namespaces.expects(:[]).with(:c).times(2).returns(namespace)
+    config = mock("config")
+    config.expects(:namespaces).times(2).returns(namespaces)
+    
+    @cli.stubs(:puts)
+    @cli.task_list(config, "c")
+  end
+
+  def test_task_list_should_query_for_all_tasks_when_namespace_doesnt_exist
+    expected_max_len = 80 - 3 - MockCLI::LINE_PADDING
+    task_list = [task("g", "c:g"), task("b", "c:b")]
+    task_list.each { |t| t.expects(:brief_description).with(expected_max_len).returns(t.fully_qualified_name)}
+
+    namespaces = mock("namespaces")
+    namespaces.expects(:[]).with(:c).returns(nil)
+    
+    config = mock("config")
+    config.expects(:namespaces).returns(namespaces)
+    
+    config.expects(:task_list).with(:all).returns(task_list)
+    
+    @cli.stubs(:puts)
+    @cli.task_list(config, "c")
+  end
+  
   def test_task_list_should_never_use_less_than_MIN_MAX_LEN_chars_for_descriptions
     @ui.stubs(:output_cols).returns(20)
     t = task("c")
